--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # Core is a separate project
-/[Aa]ssets/Core/
+/[Aa]ssets/Hopper/
 Hopper-Test
 .idea
